deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-saml-app
  namespace: node-saml-demo
  labels:
    app: node-saml-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-saml-app
  template:
    metadata:
      labels:
        app: node-saml-app
    spec:
      volumes:
        - name: app-certs
          secret:
            secretName: app-certs-secret
            defaultMode: 420
        - name: node-config
          configMap:
            name: app-config
      containers:
      - name: nodejs
        resources:
          limits:
            memory: 250Mi
            cpu: 500m
          requests:
            memory: 50Mi
            cpu: 50m
        image: registry.gitlab.cheers.local/dacheung-rh/node-saml-app:latest
        ports:
          - containerPort: 3000
        volumeMounts:
          - name: app-certs
            mountPath: /usr/src/nodesamlapp/certs
          - name: node-config
            mountPath: /usr/src/nodesamlapp/conf
---
apiVersion: v1
kind: Service
metadata:
  name: node-saml-app
  namespace: node-saml-demo
spec:
  selector:
    app: node-saml-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-saml-app
  namespace: node-saml-demo
spec:
  ingressClassName: haproxy
  rules:
  - host: node-saml-demo.apps.cheers.local
    http:
      paths:
      - backend:
          service:
            name: node-saml-app
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - node-saml-demo.apps.cheers.local
    secretName: node-saml-demo-certs
